Fix z-index of touch controls

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -43,7 +43,7 @@
   background-color: rgba(255, 255, 255, .5);
   bottom: -40px;
   right: 8px;
-  z-index: 1001;
+  z-index: 10011;
 }
 
 .touch-control.left {
